[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemoverse"
version = "0.1.0"
description = "Python SDK for Mnemoverse Memory API — persistent memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Edward Izgorodin", email = "helloworld@uinside.org" },
]
keywords = ["ai", "memory", "agents", "llm", "mcp", "hebbian", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://mnemoverse.com"
Documentation = "https://mnemoverse.com/docs/api/python-sdk"
Repository = "https://github.com/mnemoverse/mnemoverse-sdk-python"
Issues = "https://github.com/mnemoverse/mnemoverse-sdk-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
